--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ resume: false
 # resume-internal: true
 # resume-url: https://google.com/?q=my+resume
 
-url: www.miltonio.xyz
+url: https://miltonio94.github.io
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
