--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ name: Milton J. De Paula
 bio: A creator fueled by coffee
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about striving to create
 
 # if it's an external image, update below for true
 # better with square images
